--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bower": "^1.8.4",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-install": "^1.1.0",
     "jimp": "^0.6.0",
+    "jquery": "^3.3.1",
+    "normalize.css": "^8.0.1",
     "svgo": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.11.0"
